[package]
name = "bls_key_derivation"
version = "0.1.0"
authors = ["austinabell <austinabell8@gmail.com>"]
edition = "2018"
description = "BLS key derivation"
readme = "README.md"
homepage = "https://github.com/ChainSafe/rust-bls-derivation"
documentation = "https://github.com/ChainSafe/rust-bls-derivation/blob/master/README.md"
repository = "https://github.com/ChainSafe/rust-bls-derivation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2"
num-bigint = "0.2.3"
num-traits = "0.2.8"
hex = "0.3.1"
